# solana-kyc-program

./: build-deploy-install-deps.sh  package-lock.json  package.json
src/client/: get_customer.ts  kyc_process.ts  main.ts  utils.ts
src/program-rust/: Cargo.toml
src/program-rust/src/: entrypoint.rs  error.rs  lib.rs  processor.rs  state.rs
src/program-rust/tests/: lib.rs
