
[package]
name = "solana-bpf-kyc"
version = "0.0.1"
description = "KYC Implementation using Solana"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.14"
thiserror = "1.0.24"
[dev-dependencies]
solana-program-test = "=1.7.14"
solana-sdk = "=1.7.14"

[lib]
name = "kyc"
crate-type = ["cdylib", "lib"]
