[package]
name = "kyc-program"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.7.11"
thiserror = "1.0.37"
borsh = "0.9.1"
borsh-derive = "0.9.1"
serde="1.0"
serde_json="1.0"
serde_derive="1.0"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.11"
solana-sdk = "=1.7.11"
solana-validator = "=1.7.11"

[lib]
name = "kyc"
crate-type = ["cdylib", "lib"]